# ps4pkgunpacker

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/common/: error.h  path_util.cpp  path_util.h
src/common/logging/: log.h
src/core/file_format/: pkg.cpp  psf.cpp  trp.cpp
src/ui/: Main.qml  pkg_unpacker.cpp  pkg_unpacker.h  qmldir
